tests/compile-fail/01-assign-to-immutable.stderr
warning: variable `x` is assigned to, but never used
 --> tests/compile-fail/01-assign-to-immutable.rs:5:9
  |
5 |     let x = 1;
  |         ^
  |
  = note: consider using `_x` instead
  = note: `#[warn(unused_variables)]` on by default

warning: value assigned to `x` is never read
 --> tests/compile-fail/01-assign-to-immutable.rs:6:5
  |
6 |     x = 2;
  |     ^
  |
  = help: maybe it is overwritten before being read?
  = note: `#[warn(unused_assignments)]` on by default

error[E0384]: cannot assign twice to immutable variable `x`
 --> tests/compile-fail/01-assign-to-immutable.rs:3:1
  |
3 | #[workflow]
  | ^^^^^^^^^^^ cannot assign twice to immutable variable
4 | fn immutable_assign() {
5 |     let x = 1;
  |         - first assignment to `x`
  |
  = note: this error originates in the attribute macro `workflow` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider making this binding mutable
  |
5 |     let mut x = 1;
  |         +++
